src/objects/Supplier__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Text</type>
        <length>60</length>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>Contact Name</label>
        <type>Text</type>
        <length>30</length>
    </fields>
    <fields>
        <fullName>ContactTitle__c</fullName>
        <label>Contact Title</label>
        <type>Text</type>
        <length>30</length>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Text</type>
        <length>24</length>
    </fields>
    <fields>
        <fullName>HomePage__c</fullName>
        <label>Home Page</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Text</type>
        <length>24</length>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <type>Text</type>
        <length>10</length>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>SupplierID__c</fullName>
        <label>Supplier ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <label>Supplier</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>{!label} Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>